// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Serlina dev mode snapshot 1`] = `
"<!DOCTYPE html><html data-reactroot=\\"\\"><head><title data-react-helmet=\\"true\\"></title><script src=\\"http://127.0.0.1:3000/_SERLINA_VENDOR.js\\"></script><script>
        window.__serlina__DATA = {};
        window.__serlina__DATA.pageInitialProps = {};
      </script></head><body><div id=\\"app\\"><div data-reactroot=\\"\\">Page1</div></div><script src=\\"http://127.0.0.1:3000/page1.js\\"></script><script src=\\"http://127.0.0.1:3000/_SERLINA_MAIN.js\\"></script></body></html>"
`;

exports[`Serlina dev mode snapshot 2`] = `
"<!DOCTYPE html><html data-reactroot=\\"\\"><head><title data-react-helmet=\\"true\\"></title><link rel=\\"stylesheet\\" href=\\"http://127.0.0.1:3000/page2.css\\"/><script src=\\"http://127.0.0.1:3000/_SERLINA_VENDOR.js\\"></script><script>
        window.__serlina__DATA = {};
        window.__serlina__DATA.pageInitialProps = {\\"foo\\":\\"foo\\"};
      </script></head><body><div id=\\"app\\"><div data-reactroot=\\"\\">Page2 - <!-- -->foo</div></div><script src=\\"http://127.0.0.1:3000/page2.js\\"></script><script src=\\"http://127.0.0.1:3000/_SERLINA_MAIN.js\\"></script></body></html>"
`;

exports[`Serlina prod mode snapshot 1`] = `
"<!DOCTYPE html><html data-reactroot=\\"\\"><head><title data-react-helmet=\\"true\\"></title><script src=\\"/public/_SERLINA_VENDOR-413dfe68a4d8ff088873.js\\"></script><script>
        window.__serlina__DATA = {};
        window.__serlina__DATA.pageInitialProps = {};
      </script></head><body><div id=\\"app\\"><div data-reactroot=\\"\\">Page1</div></div><script src=\\"/public/page1.cmd.js\\"></script><script src=\\"/public/_SERLINA_MAIN-2b5d493ca25a8554a727.js\\"></script></body></html>"
`;

exports[`Serlina prod mode snapshot 2`] = `
"<!DOCTYPE html><html data-reactroot=\\"\\"><head><title data-react-helmet=\\"true\\"></title><link rel=\\"stylesheet\\" href=\\"/public/page2-a41aafc2f333e9ed5d39.css\\"/><script src=\\"/public/_SERLINA_VENDOR-413dfe68a4d8ff088873.js\\"></script><script>
        window.__serlina__DATA = {};
        window.__serlina__DATA.pageInitialProps = {\\"foo\\":\\"foo\\"};
      </script></head><body><div id=\\"app\\"><div data-reactroot=\\"\\">Page2 - <!-- -->foo</div></div><script src=\\"/public/page2.cmd.js\\"></script><script src=\\"/public/_SERLINA_MAIN-2b5d493ca25a8554a727.js\\"></script></body></html>"
`;
